--- a/gnome-shell/gnome-shell.css
+++ b/gnome-shell/gnome-shell.css
@@ -16,7 +16,6 @@ stage {
   text-shadow: 0 1px black;
   icon-shadow: 0 1px black;
   border-radius: 4px;
-  border-width: 0;
   padding: 4px 32px; }
   .button:focus, .app-folder-dialog .edit-folder-button:focus {
     color: #8fbcbb;
@@ -953,13 +952,6 @@ StScrollBar {
   width: 31.5em; }
   .message-list .message-title, .message-list .message-content, .message-list .message-body {
     color: #c8d0e0; }
-
-.message-list-clear-button.button {
-  border: 1px solid #1f232b;
-  box-shadow: none;
-  margin: 1.5em 1.5em 0; }
-  .message-list-clear-button.button:hover, .message-list-clear-button.button:focus {
-    background-color: #39404f; }
 
 .message-list-sections {
   spacing: 1em; }
